@@ -78,8 +78,10 @@ const uint16_t *kr_gc_key_consistent(knot_db_val_t key)
 	} else {
 		/* find the first double zero in the key */
 		for (i = 2; kd[i - 1] || kd[i - 2]; ++i) {
-			if (i >= key.len)
+			if (i >= key.len) {
+				// TODO: assert(!EINVAL) -> kr_assume()
 				return NULL;
+			}
 		}
 	}
 	// the next character can be used for classification
@@ -94,8 +96,10 @@ const uint16_t *kr_gc_key_consistent(knot_db_val_t key)
 		return &NSEC1;
 	case '3':
 		return &NSEC3;
-	case 'S': // we don't GC the rtt_state entries, at least for now
+	case 'S': // the rtt_state entries are considered inconsistent, at least for now
+		return NULL;
 	default:
+		assert(!EINVAL);
 		return NULL;
 	}
 }
